# hitler-server-rs

./: .gitignore  Cargo.toml  games.txt  rustfmt.toml  test.md  test_analysis_ambiguities.md
autoplay/: autoplay.js  package-lock.json
src/: api.rs  client.rs  error.rs  game.rs  main.rs  pg.rs  session.rs  test.rs  time.rs  ws.rs
src/game/: action.rs  adjacent.rs  board.rs  confirmations.rs  deck.rs  eligible.rs  executive_power.rs  government.rs  json.rs  options.rs  party.rs  player.rs  prompt.rs  serde.rs  test.rs  test_backup.rs  update.rs  votes.rs
src/game/test/: anarchist_mechanics.rs  anti_policies.rs  communist_knowledge.rs  communist_powers.rs  edge_cases.rs  emergency_powers.rs  executive_powers.rs  government.rs  initialization.rs  integration.rs  legislative.rs  message_broadcasting.rs  mod.rs  monarchist_victory.rs  player_count_validation.rs  player_management.rs  policy_deck_construction.rs  policy_tracker_tests.rs  role_assignment.rs  social_democratic_policy.rs  special_roles.rs  special_roles_interaction.rs  state_transitions.rs  state_validation.rs  test_utils.rs  victory_conditions.rs
