[package]
name = "hitler-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
dotenv = "0.15.0"
rand = { version = "0.8.5", features = ["serde", "serde1"] }
rand_chacha = { version = "0.3.1", features = ["serde", "serde1"] }
serde = { version = "1.0.151", features = ["derive"] }
thiserror = "1.0.37"
