[package]
name = "hitler-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.25"
log = "0.4.17"
rand = { version = "0.8.5", features = ["serde", "serde1"] }
rand_chacha = { version = "0.3.1", features = ["serde", "serde1"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
