[package]
name = "hitler-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
axum = "0.7.4"
chrono = { version = "0.4.23", features=["serde"] }
dashmap = "5.4.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.25"
log = "0.4.17"
rand = { version = "0.8.5", features = ["serde", "serde1"] }
rand_chacha = { version = "0.3.1", features = ["serde", "serde1"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
sled = "0.34.7"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
tokio-tungstenite = "0.18.0"
